Add parallax eddie driver

--- a/parallax_eddie_driver/CMakeLists.txt
+++ b/parallax_eddie_driver/CMakeLists.txt
@@ -11,6 +11,8 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
+  genmsg
+  message_generation
 )
 
 ## System dependencies are found with CMake's conventions
@@ -47,18 +49,33 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  ADC.msg
+  BatteryLevel.msg
+  Distances.msg
+  KeyStroke.msg
+  Ping.msg
+  Speech.msg
+  Velocity.msg
+  Voltages.msg
+)
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+add_service_files(
+  FILES
+  Accelerate.srv
+  DriveWithDistance.srv
+  DriveWithPower.srv
+  DriveWithSpeed.srv
+  GetDistance.srv
+  GetHeading.srv
+  GetSpeed.srv
+  GetStatus.srv
+  ResetEncoder.srv
+  Rotate.srv
+  StopAtDistance.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -68,10 +85,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -103,7 +120,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
+ # INCLUDE_DIRS include
 #  LIBRARIES parallax_eddie_driver
 #  CATKIN_DEPENDS roscpp rospy std_msgs
 #  DEPENDS system_lib
@@ -116,7 +133,7 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
+  include
   ${catkin_INCLUDE_DIRS}
 )
 
@@ -149,6 +166,26 @@ include_directories(
 # target_link_libraries(${PROJECT_NAME}_node
 #   ${catkin_LIBRARIES}
 # )
+
+add_executable(eddie src/eddie.cpp)
+target_link_libraries(eddie ${catkin_LIBRARIES})
+add_dependencies(eddie ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+add_executable(eddie_adc src/eddie_adc.cpp)
+target_link_libraries(eddie_adc ${catkin_LIBRARIES})
+add_dependencies(eddie_adc ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+add_executable(eddie_ping src/eddie_ping.cpp)
+target_link_libraries(eddie_ping ${catkin_LIBRARIES})
+add_dependencies(eddie_ping ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+add_executable(eddie_teleop src/eddie_teleop.cpp)
+target_link_libraries(eddie_teleop ${catkin_LIBRARIES})
+add_dependencies(eddie_teleop ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+add_executable(eddie_controller src/eddie_controller.cpp)
+target_link_libraries(eddie_controller ${catkin_LIBRARIES})
+add_dependencies(eddie_controller ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 #############
 ## Install ##
