--- a/eddiebot/eddiebot_launchers/package.xml
+++ b/eddiebot/eddiebot_launchers/package.xml
@@ -9,13 +9,13 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="zeyuzhang@todo.todo">zeyuzhang</maintainer>
+  <maintainer email="zeyuz@outlook.com">Zeyu Zhang</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>Apache-2.0</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
