update README and launch files

--- a/eddiebot/eddiebot_bringup/package.xml
+++ b/eddiebot/eddiebot_bringup/package.xml
@@ -69,6 +69,7 @@
   <exec_depend>genmsg</exec_depend>
   <exec_depend>message_generation</exec_depend>
   <exec_depend>eddiebot_msgs</exec_depend>
+  <exec_depend>eddiebot_odom</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
