--- a/eddiebot/eddiebot_teleop/package.xml
+++ b/eddiebot/eddiebot_teleop/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>eddiebot_teleop</name>
-  <version>1.0.0</version>
+  <version>1.1.0</version>
   <description>Provides teleoperation using keyboard.</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
@@ -53,6 +53,7 @@
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>eddiebot_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
@@ -62,6 +63,7 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>eddiebot_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
