--- a/eddiebot_apps/room_segmentation/ipa_room_segmentation/ros/params/room_segmentation_action_server_params.yaml
+++ b/eddiebot_apps/room_segmentation/ipa_room_segmentation/ros/params/room_segmentation_action_server_params.yaml
@@ -9,7 +9,7 @@ room_segmentation_algorithm: 3
 
 # displays the segmented map upon service call
 # bool
-display_segmented_map: true
+display_segmented_map: false
 
 # publishes the segmented map as grid map upon service call
 # bool
@@ -29,8 +29,8 @@ room_area_factor_upper_limit_distance: 163.0
 room_area_factor_lower_limit_distance: 0.35
 
 #Voronoi segmentation: 120.0 - 1.53 (means the max/min area that an area separated by critical lines is allowed to have)
-room_area_factor_upper_limit_voronoi: 1000000.0        #120.0
-room_area_factor_lower_limit_voronoi: 0.1              #1.53
+room_area_factor_upper_limit_voronoi: 120         #120.0
+room_area_factor_lower_limit_voronoi: 1.53           #1.53
 
 #Semantic Segmentation: 23.0 - 1.0 (means the max/min area a connected classified region is allowed to have)
 room_area_factor_upper_limit_semantic: 1000000.0 # if you choose this value small (i.e 23.0) then too big hallway contours are randomly separated into smaller regions using a watershed algorithm, which can look bad
