--- a/eddiebot_simulator/eddiebot_gazebo/package.xml
+++ b/eddiebot_simulator/eddiebot_gazebo/package.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>eddiebot_gazebo</name>
-  <version>0.0.0</version>
-  <description>The eddiebot_gazebo package</description>
+  <version>1.0.0</version>
+  <description>
+    The eddiebot_gazebo package provides simulation environment for eddiebot.
+  </description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="vcla@todo.todo">vcla</maintainer>
+  <maintainer email="zeyuz@outlook.com">Zeyu Zhang</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>Apache-2.0</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
@@ -49,7 +51,6 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
