save segmented map to json

--- a/eddiebot_apps/room_segmentation/package.xml
+++ b/eddiebot_apps/room_segmentation/package.xml
@@ -38,6 +38,7 @@
 	<depend>nav_msgs</depend>
 	<depend>opengm</depend>
 	<depend>roscpp</depend>
+	<depend>rospy</depend>
 	<depend>roslib</depend>
 	<depend>sensor_msgs</depend>
 	<depend>geometry_msgs</depend>
