--- a/eddiebot_apps/eddiebot_ssl/CMakeLists.txt
+++ b/eddiebot_apps/eddiebot_ssl/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
+  actionlib
 )
 
 ## System dependencies are found with CMake's conventions
@@ -105,10 +106,10 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES eddiebot_ssl
-#  CATKIN_DEPENDS geometry_msgs nav_msgs roscpp rospy std_msgs
-#  DEPENDS system_lib
+ # INCLUDE_DIRS include
+ LIBRARIES eddiebot_ssl
+ CATKIN_DEPENDS geometry_msgs nav_msgs roscpp rospy std_msgs actionlib
+ DEPENDS system_lib
 )
 
 ###########
